[package]
name = "node-pty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.0-alpha.6", features = ["async"]}
napi-derive = "2.0.0-alpha.6"
serde = "1.0.130"
#serde_json = "1.0.68"
serde_derive = "1"
nix = "0.23.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
napi-build = "1.1.1"

[profile.release]
lto = true
